Class and object code

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,7 @@
 eclipse.preferences.version=1
+encoding//src/InterviewQuestions/Q7.java=UTF-8
+encoding//src/com/myexercises/Reply.java=UTF-8
+encoding//src/com/myexercises/Tasks.java=UTF-8
 encoding//src/com/syntax/class09/ArrayDemo.java=UTF-8
 encoding//src/com/syntax/class09/ArrayMaxMinSum.java=UTF-8
 encoding//src/com/syntax/class09/ScannerArray.java=UTF-8
